--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <p id="form-error-text">Debe ingresar nombre y apellido</p>
             <p id="form-error-text">Debe ingresar iniciales en mayúsculas</p>
             <label for="form-input-number">Número:</label>
-            <input type="text" id="form-input-number" name="form-input-number" placeholder="0412-9876543"
+            <input type="text" id="form-input-number" name="form-input-number" placeholder="04129876543"
               autocomplete="on">
             <p id="form-error-text">Debe ser un número venezolano válido</p>
           </div>
